src/build_log_2.txt
==========================================
  COMPILAR Y EJECUTAR SERVIDOR WEB
  Puerto: 18080
==========================================

[1/2] Compilando SQLite (C)...
[OK] SQLite compilado correctamente.

[2/2] Compilando proyecto C++...
cpp/DB_Backend.cpp: In member function 'bool DB_Backend::Eliminar_Usuario(const std::string&)':
cpp/DB_Backend.cpp:644:40: error: qualified-id in declaration before '(' token
  644 |   bool DB_Backend::_ejecutar_sql_script(const char *sql) {
      |                                        ^
cpp/DB_Backend.cpp:655:4: error: expected '}' at end of input
  655 |   }
      |    ^
cpp/DB_Backend.cpp:633:62: note: to match this '{'
  633 | bool DB_Backend::Eliminar_Usuario(const std::string &run_id) {
      |                                                              ^
cpp/DB_Backend.cpp:655:4: warning: control reaches end of non-void function [-Wreturn-type]
  655 |   }
      |    ^
cpp/CrowServer.cpp: In lambda function:
cpp/CrowServer.cpp:99:26: error: 'const struct PerfilEstudiante' has no member named 'run'
   99 |       student["run"] = s.run;
      |                          ^~~
In file included from cpp/CrowServer.cpp:3:
libs/include/crow_all.h: In instantiation of 'typename std::enable_if<crow::black_magic::CallHelper<F, crow::black_magic::S<Args ...> >::value, void>::type crow::detail::wrapped_handler_call(crow::request&, crow::response&, const F&, Args&& ...) [with F = runWebServer(DB_Backend&)::<lambda()>; Args = {}; typename std::enable_if<crow::black_magic::CallHelper<F, crow::black_magic::S<Args ...> >::value, void>::type = void]':
libs/include/crow_all.h:13058:45:   required from 'void crow::TaggedRule<Args>::operator()(Func&&) [with Func = runWebServer(DB_Backend&)::<lambda()>; Args = {}]'
13058 |                 detail::wrapped_handler_call(req, res, f, std::forward<Args>(args)...);
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cpp/CrowServer.cpp:94:3:   required from here
   94 |   ([&db]() {
      |   ^
libs/include/crow_all.h:10485:25: error: no matching function for call to 'crow::response::response(std::vector<crow::json::wvalue>)'
10485 |             res = crow::response(f(std::forward<Args>(args)...));
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
libs/include/crow_all.h:10485:25: note: there are 11 candidates
libs/include/crow_all.h:9068:9: note: candidate 1: 'crow::response::response(crow::returnable&)'
 9068 |         response(returnable& value)
      |         ^~~~~~~~
libs/include/crow_all.h:9068:30: note: no known conversion for argument 1 from 'std::vector<crow::json::wvalue>' to 'crow::returnable&'
 9068 |         response(returnable& value)
      |                  ~~~~~~~~~~~~^~~~~
libs/include/crow_all.h:9096:9: note: candidate 2: 'crow::response::response(int, std::string, std::string)'
 9096 |         response(int code_, std::string contentType, std::string body_):
      |         ^~~~~~~~
libs/include/crow_all.h:9096:9: note: candidate expects 3 arguments, 1 provided
libs/include/crow_all.h:9090:9: note: candidate 3: 'crow::response::response(std::string, std::string)'
 9090 |         response(std::string contentType, std::string body_):
      |         ^~~~~~~~
libs/include/crow_all.h:9090:9: note: candidate expects 2 arguments, 1 provided
libs/include/crow_all.h:9085:9: note: candidate 4: 'crow::response::response(crow::response&&)'
 9085 |         response(response&& r)
      |         ^~~~~~~~
libs/include/crow_all.h:9085:29: note: no known conversion for argument 1 from 'std::vector<crow::json::wvalue>' to 'crow::response&&'
 9085 |         response(response&& r)
      |                  ~~~~~~~~~~~^
libs/include/crow_all.h:9079:9: note: candidate 5: 'crow::response::response(int, crow::returnable&&)'
 9079 |         response(int code_, returnable&& value):
      |         ^~~~~~~~
libs/include/crow_all.h:9079:9: note: candidate expects 2 arguments, 1 provided
libs/include/crow_all.h:9073:9: note: candidate 6: 'crow::response::response(int, crow::returnable&)'
 9073 |         response(int code_, returnable& value):
      |         ^~~~~~~~
libs/include/crow_all.h:9073:9: note: candidate expects 2 arguments, 1 provided
libs/include/crow_all.h:9063:9: note: candidate 7: 'crow::response::response(crow::returnable&&)'
 9063 |         response(returnable&& value)
      |         ^~~~~~~~
libs/include/crow_all.h:9063:31: note: no known conversion for argument 1 from 'std::vector<crow::json::wvalue>' to 'crow::returnable&&'
 9063 |         response(returnable&& value)
      |                  ~~~~~~~~~~~~~^~~~~
libs/include/crow_all.h:9061:9: note: candidate 8: 'crow::response::response(int, std::string)'
 9061 |         response(int code_, std::string body_) : code(code_), body(std::move(body_)) {}
      |         ^~~~~~~~
libs/include/crow_all.h:9061:9: note: candidate expects 2 arguments, 1 provided
libs/include/crow_all.h:9060:9: note: candidate 9: 'crow::response::response(std::string)'
 9060 |         response(std::string body_) : body(std::move(body_)) {}
      |         ^~~~~~~~
libs/include/crow_all.h:9060:30: note: no known conversion for argument 1 from 'std::vector<crow::json::wvalue>' to 'std::string' {aka 'std::__cxx11::basic_string<char>'}
 9060 |         response(std::string body_) : body(std::move(body_)) {}
      |                  ~~~~~~~~~~~~^~~~~
libs/include/crow_all.h:9059:18: note: candidate 10: 'crow::response::response(int)'
 9059 |         explicit response(int code_) : code(code_) {}
      |                  ^~~~~~~~
libs/include/crow_all.h:9059:31: note: no known conversion for argument 1 from 'std::vector<crow::json::wvalue>' to 'int'
 9059 |         explicit response(int code_) : code(code_) {}
      |                           ~~~~^~~~~
libs/include/crow_all.h:9058:9: note: candidate 11: 'crow::response::response()'
 9058 |         response() {}
      |         ^~~~~~~~
libs/include/crow_all.h:9058:9: note: candidate expects 0 arguments, 1 provided

[X] ERROR EN LA COMPILACION.
Presione una tecla para continuar . . . 